--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "^15.5.0"
     "postcss": "^8.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
