--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@fontsource/open-sans": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
     "@fontsource/source-code-pro": "^5.1.0",
-    "@hookform/resolvers": "^5.2.1",
+    "@hookform/resolvers": "^3.9.1",
     "@mercadopago/sdk-react": "^1.0.6",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -33,21 +33,17 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-hover-card": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-menubar": "^1.1.15",
-    "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-menubar": "^2.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.12",
+    "@radix-ui/react-radio-group": "^1.2.12",
+    "@radix-ui/react-scroll-area": "^1.2.15",
+    "@radix-ui/react-select": "^2.1.15",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.3.5",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-slider": "^1.2.15",
+    "@radix-ui/react-switch": "^1.1.12",
+    "@radix-ui/react-tabs": "^1.1.15",
+    "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.48.1",
     "@vercel/analytics": "^1.3.1",
@@ -82,7 +78,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "^15.5.0"
+    "eslint-config-next": "^15.5.0",
     "postcss": "^8.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
