--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-hover-card": "^1.1.14",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-menubar": "^2.1.15",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.12",
     "@radix-ui/react-menubar": "^1.1.16",
     "@radix-ui/react-scroll-area": "^1.2.15",
     "@radix-ui/react-select": "^2.1.15",
-    "@radix-ui/react-separator": "^1.1.7",
+    
     "@radix-ui/react-slider": "^1.2.15",
     
     "@radix-ui/react-tabs": "^1.1.15",
