--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "mvp-fitness",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -30,58 +30,23 @@
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-context-menu": "^2.2.15",
     "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-hover-card": "^1.1.14",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-menubar": "^1.1.16",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-progress": "^1.1.12",
-    "@radix-ui/react-radio-group": "^1.2.12",
-    "@radix-ui/react-scroll-area": "^1.2.15",
-    "@radix-ui/react-select": "^2.1.15",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.2.15",
-    "@radix-ui/react-switch": "^1.1.12",
-    "@radix-ui/react-tabs": "^1.1.15",
-    "@radix-ui/react-toast": "^1.2.15",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/supabase-js": "^2.48.1",
-    "@vercel/analytics": "^1.3.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.6.0",
-    "geist": "^1.3.1",
-    "input-otp": "^1.4.2",
-    "lucide-react": "^0.536.0",
-    "mercadopago": "^2.11.0",
-    "next": "15.4.6",
-    "next-themes": "^0.4.6",
-    "openai": "^4.72.1",
-    "react": "19.1.0",
-    "react-day-picker": "^9.8.1",
-    "react-dom": "19.1.0",
-    "react-hook-form": "^7.62.0",
-    "react-resizable-panels": "^3.0.4",
-    "recharts": "^2.15.4",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "vaul": "^1.1.2",
-    "zod": "^3.25.76"
+    "next": "^14.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "^15.5.0",
-    "postcss": "^8.5",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8.0.0",
+    "tailwindcss": "^3.0.0",
+    "typescript": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
