--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.0"
+    "react-hook-form": "^7.50.0",
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -46,7 +46,7 @@
     "postcss": "^8.0.0",
     "tailwindcss": "^3.0.0",
     "typescript": "^5.0.0"
-  },
+  "typescript": "^5.0.0"
   "engines": {
     "node": ">=18.17.0"
   }
