--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "postcss": "^8.0.0",
     "tailwindcss": "^3.0.0",
     "typescript": "^5.0.0"
-  "typescript": "^5.0.0"
+  },"typescript": "^5.0.0" 
   "engines": {
     "node": ">=18.17.0"
   }
